--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <br>
         <br>
         <button class="btn btn-lg btn-primary" id = "webvtt-test-button">Webvtt Test</button>
+        <br>
+        <br>
+        <button class="btn btn-lg btn-primary" id = "CVE-2018-5092-test-button">CVE-2018-5092 Test (Only for Chrome and windows 10)</button>
+        <br>
+        <br>
+        <button class="btn btn-lg btn-primary" id = "CVE-2017-7843-test-button">CVE-2017-7843 Test</button>
       </div>
     </div>
     <div class = "row text-center" id = "status">
